syntax = "proto3";

package testpb;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";

message WithAMap{
  map<string, string> str_map = 1;
}

message ABitOfEverything {
  NestedMessage message = 1;
  AnEnum enum = 2;
  //map<string, string> str_map = 3;

  repeated int32 repeated = 6;

  string str = 7;
  bool bool = 8;
  bytes bytes = 9;
  int32 i32 = 10;
  fixed32 f32 = 11;
  uint32 u32 = 12;
  sint32 si32 = 13;
  sfixed32 sf32 = 14;
  int64 i64 = 15;
  fixed64 f64 = 16;
  uint64 u64 = 17;
  sint64 si64 = 18;
  sfixed64 sf64 = 19;

  google.protobuf.Any any = 22;
  google.protobuf.Timestamp timestamp = 23;
  google.protobuf.Duration duration = 24;
}

message NestedMessage {
  string foo = 1;
  int32 bar = 2;
}

enum AnEnum {
  UNDEFINED = 0;
  ONE = 1;
  TWO = 2;
}